# Practice2

./: .gitignore
C++/: CMakeLists.txt  Makefile  main.cpp  test_data_modinv1.txt  test_data_shamir.txt
C++/ShamirCrypt/: test_data.txt
C++/ShamirCrypt/include/: math_utils.h  shamir.h
C++/ShamirCrypt/src/: main.cpp  math_utils.cpp  shamir.cpp
C++/data/: test_data_modinv2.txt
C++/include/: algorithms.hpp  mathUtils.hpp  math_utils.h  math_utils.hpp  menuUtils.hpp  menu_utils.hpp  mitm_attack.hpp  task_functions.h
C++/modexp_ferm/: main.cpp  test_data.txt
C++/modexp_ferm/include/: math_utils.h  prime_utils.h
C++/modexp_ferm/src/: main.cpp  math_utils.cpp  prime_utils.cpp
C++/modular_inverse/: main.cpp
C++/modular_inverse/src/: main.cpp
C++/modular_inverse1/: Makefile
C++/modular_inverse1/include/: math_utils.h
C++/modular_inverse1/src/: main.cpp  math_utils.cpp
C++/modular_inverse2/: test_data.txt
C++/modular_inverse2/include/: math_utils.h
C++/modular_inverse2/src/: main.cpp  math_utils.cpp
C++/solveDiophantine/: Makefile  main.cpp
C++/solveDiophantine/include/: math_utils.h
C++/solveDiophantine/src/: main.cpp  math_utils.cpp
C++/src/: main.cpp  math_utils.cpp  menu_utils.cpp  mod_inverse1.cpp  mod_inverse2.cpp  modexp.cpp  shamir.cpp  solveDiophantine.cpp
C++/src/algorithms/: attackSimulations.cpp  modExp.cpp  modInverse1.cpp  modInverse2.cpp  mod_inverse1.cpp  mod_inverse2.cpp  modexp.cpp  shamir.cpp  solveDiophantine.cpp
C++/src/utils/: mathUtils.cpp  math_utils.cpp  menuUtils.cpp  menu_utils.cpp
C++/task3/: main.cpp
C++/task4/: main.cpp
C++/task5/: main.cpp
GoLang/: go.mod  main.go
GoLang/algorithms/: attackSimulations.go  modExp.go  modInverse1.go  modInverse2.go  shamir.go  solveDiophantine.go
GoLang/utils/: mathUtils.go
